# scratch2json

./: LICENSE  README.md  example.json  pyproject.toml
extension/: extension.js  extension.ref.js
src/: cli.py  main.py  requiremets.txt
src/modules/compile_project/: compile.py
src/modules/convert_project/: convert_project.py
src/modules/init_project/: init_project.py
src/modules/read_project/: read_project.py
src/scratch2json/: cli.py
src/scratch2json/modules/backend/: backend.py  routes.py
src/scratch2json/modules/compile_project/: compile.py
src/scratch2json/modules/convert_project/: convert_project.py
src/scratch2json/modules/tui/: tui.py
test/: Test scratch2json.pmp
test/Test scratch2json/: project.json
