[project]
name = "scratch2json"
version = "0.1.0"
description = "CLI tool for converting and compiling Scratch projects"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["ijson"]

[project.scripts]
scratch2json = "scratch2json.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["scratch2json", "scratch2json.*"]
